--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,8 @@
   <!-- <meta name="viewport" content="width=device-width"> -->
   <meta http-equiv="cleartype" content="on">
 
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
